--- a/src/el-centre.html
+++ b/src/el-centre.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
-    <title>Centre Mèdic Sabadell</title>
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <script defer="defer" src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script defer="defer" src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Cabin:700|Lora:400,400i,700" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
+  <title>Centre Mèdic Sabadell</title>
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <script defer="defer" src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous">
+  </script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Cabin:700|Lora:400,400i,700" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+</head>
 
-  <body id="page-top">
-    <div class="container-fluid m-0 p-0">
+<body id="page-top">
+  <div class="page-container">
+    <div class="content-wrapper">
       <nav class="navbar navbar-expand-lg navbar-dark shadow" id="mainNav">
         <div class="nav container-fluid ml-0 mr-0 pr-0" id="containerDiv">
-          <a href="index.html" id="home-link"></a>
+          <a href="index.html" class="home-link"></a>
           <button class="navbar-toggler navbar-toggler-right bg-cms mr-3" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton">
             <i class="fa fa-bars"></i>
           </button>
@@ -41,7 +42,7 @@
           <!-- END navbarResponsive -->
           <div class="pr-0 mt-0 width-15 text-left d-none d-lg-block bg-cms-light" id="solicitarVisita">
             <p>
-              <span class="text-muted">Sol·licitar visita:</span><br/>
+              <span class="text-muted">Sol·licitar visita:</span><br />
               <strong>93 726 55 00</strong>
             </p>
           </div>
@@ -54,51 +55,35 @@
         <button class="text-cms-light bg-cms ml-2 mt-2 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto">
-            <li class="nav-item active">
-              <a data-toggle="collapse" data-target="#collapseEspecialitats" onclick="requestEspecialitats();">
-                <div class="nav-item">
-                  <i class="text-cms-light fas fa-stethoscope fa-2x"></i><br/>
-                  <p>Especialitats</p>
-                </div>
-              </a>
-            </li>
-            <li class="nav-item">
-              <div class="nav-item">
-                <i class="text-cms-light fas fa-user-nurse fa-2x"></i><br/>
-                <p>Quadre mèdic</p>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <div class="nav-item">
-                <i class="text-cms-light far fa-building fa-2x"></i><br/>
-                <p>Mútues</p>
-              </div>
-            </li>
-            <li class="nav-item">
-              <div class="nav-item">
-                <i class="text-cms-light fas fa-adjust fa-2x"></i><br/>
-                <p>Unitat estètica</p>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a href="http://www.centremedicsabadell.net/">
-                <div class="nav-item">
-                  <i class="text-cms-light far fa-clipboard fa-2x"></i><br/>
-                  <p>Sol·licitar visita</p>
-                </div>
-              </a>
-            </li>
-            <li class="nav-item">
-              <div class="nav-item">
-                <a href="#infoContacte" id="anchorContacte" class="js-scroll-trigger">
-                  <i class="text-cms-light fas fa-phone fa-2x"></i><br/>
-                  <p>Contacte</p>
-                </a>
-              </div>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse navbar-supported-content" id="navbarSupportedContent">
+          <div class="nav-item active" data-toggle="collapse" data-target="#collapseEspecialitats" onclick="requestEspecialitats();">
+            <i class="text-cms-light fas fa-stethoscope fa-2x"></i><br />
+            <p>Especialitats</p>
+          </div>
+          <div class="nav-item">
+            <i class="text-cms-light fas fa-user-nurse fa-2x"></i><br />
+            <p>Quadre mèdic</p>
+          </div>
+          <div class="nav-item">
+            <i class="text-cms-light far fa-building fa-2x"></i><br />
+            <p>Mútues</p>
+          </div>
+          <div class="nav-item">
+            <i class="text-cms-light fas fa-adjust fa-2x"></i><br />
+            <p>Unitat estètica</p>
+          </div>
+          <div class="nav-item">
+            <a href="http://www.centremedicsabadell.net/">
+              <i class="text-cms-light fas fa-clipboard fa-2x"></i><br/>
+              <p>Sol·licitar visita</p>
+            </a>
+          </div>
+          <div class="nav-item">
+            <a href="#infoContacte">
+              <i class="text-cms-light fas fa-phone fa-2x"></i><br/>
+              <p>Contacte</p>
+            </a>
+          </div>
         </div>
       </nav>
       <div class="collapse" id="collapseEspecialitats">
@@ -106,7 +91,7 @@
       </div>
       <div class="p-3" id="body-container">
         <div class="container">
-          <div class="row my-250" id="first-row">
+          <div class="row row-el-centre" id="first-row">
             <div class="col">
               <div class="row">
                 <div class="col">
@@ -123,7 +108,7 @@
             </div>
           </div>
           <!-- END first row (Qui som?) -->
-          <div class="row my-250" id="entrada-exterior">
+          <div class="row row-el-centre" id="entrada-exterior">
             <div class="col-6">
               <div class="row">
                 <div class="col title">
@@ -144,14 +129,14 @@
         </div>
         <!-- END first container -->
         <div class="no-gutters">
-          <div class="row">
+          <div class="row row-el-centre">
             <div class="col img-hover-zoom-container">
               <div id="exterior"></div>
             </div>
           </div>
         </div>
         <div class="container my-250">
-          <div class="row mb-4" id="entrada-exterior">
+          <div class="row row-el-centre mb-4">
             <div class="col-6 my-auto">
               <div class="row">
                 <div class="col title">
@@ -170,45 +155,48 @@
           </div>
         </div>
       </div>
-      <footer>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm"></div>
-            <div class="col-sm"></div>
-            <div class="col-sm p-a m-a">
-              <img class="bg-light br-5 p-2" src="images/logo-menu.png" alt="Logo CMS">
-            </div>
-            <div class="col-sm">
-              <p class="text-left-align" id="infoContacte">
-                <h4 class="text-muted">Informació de Contacte:</h4>
+    </div>
+    <footer>
+      <div class="container ">
+        <div class="row">
+          <div class="col-md col-sm-6">First column</div>
+          <div class="col-md col-sm-6">Second column</div>
+          <div class="col-md col-sm-6">
+            <img class="bg-light br-5 p-2" src="images/logo-menu.png" alt="Logo CMS"></img>
+          </div>
+          <div class="col-md col-sm-6">
+            <p class="text-left-align" id="infoContacte">
+              <h4 class="text">Informació de Contacte:</h4>
+              <a class="color-white" href="https://goo.gl/maps/K65LNsJTPHKqen846">
+              <div>
+                Carrer de Parre Sallarès, 8
                 <br>
-                <a href="https://goo.gl/maps/K65LNsJTPHKqen846">
-                  <div>
-                    Carrer de Parre Sallarès, 8
-                    <br>
-                    08201, Sabadell
-                  </div>
-                </a>
-                <br>
-                <strong>93 726 55 00</strong>
-              </p>
-            </div>
+                08201, Sabadell
+              </div>
+            </a>
+              <br>
+              <p>93 726 55 00</p>
+            </p>
           </div>
         </div>
-        <!-- <ul> <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li> </ul> -->
-        <copy>&copy;
-          <script type="text/javascript">
-            document.write(new Date().getFullYear())
-          </script>
-          Servamed, Ricard Mallafré</copy>
-      </footer>
-    </div>
-    <script src="js/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="index.js"></script>
-  </body>
+      </div>
+      <!-- <ul> <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li> </ul> -->
+      <copy>&copy;
+        <script type="text/javascript">
+          document.write(new Date()
+            .getFullYear())
+
+        </script>
+        Servamed, Ricard Mallafré</copy>
+    </footer>
+  </div>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery.easing.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+  <script src="index.js"></script>
+</body>
 
 </html>
